# automated-work-diary

./: .gitignore  README.md  journal_example_1.md  journal_example_2.md  pyproject.toml  requirements.txt
src/automated_work_diary/: __main__.py  cluster.py
