[project]
name = "automated-work-diary"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Blake Moody", email = "32070003+blayyyyyk@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["uv_build>=0.10.7,<0.11.0"]
build-backend = "uv_build"
